Address layout issues in index page

--- a/redesign/css/cyclescape.css
+++ b/redesign/css/cyclescape.css
@@ -117,11 +117,11 @@ button.social {align-self: flex-start; display: inline-block; width: auto; borde
 button.social.twitter {background-color: #7ABCFF; color: white;}
 button.social.facebook {background-color: #7C9EFF; color: white;}
 
-div.action {display: inline-flex; width: 270px; flex-direction: row; border: 1px solid #ECECEC; border-radius: 25px; color: #185B3D; padding: 10px 5px; margin: 10px 0; cursor: pointer; transition: .1s;}
-div.action:hover {background-color: #F6F6F6;}
-div.action .icon {display: flex; flex-direction: column; flex-basis: 100%; flex: 1; align-self: center; text-align: center; font-size: 25px;}
-div.action .text {display: flex; flex-direction: column; flex-basis: 100%; flex: 4;}
-div.action .text h2 {font-weight: bold; margin: 0;}
+a.action {display: inline-flex; width: 270px; flex-direction: row; border: 1px solid #ECECEC; border-radius: 25px; color: #185B3D; padding: 10px 5px; margin: 10px 0; cursor: pointer; transition: .1s; text-decoration: none;}
+a.action:hover {background-color: #F6F6F6;}
+a.action .icon {display: flex; flex-direction: column; flex-basis: 100%; flex: 1; align-self: center; text-align: center; font-size: 25px;}
+a.action .text {display: flex; flex-direction: column; flex-basis: 100%; flex: 4; text-decoration: none;}
+a.action .text h2 {font-weight: bold; margin: 0;}
 
 ul.unstyled {list-style: none;}
 
@@ -231,14 +231,18 @@ ul.add-content li:hover {border-color: #185B3D;}
 .index h4 {color: #AC3E27; font-weight: 500; font-size: 38px;}
 .index h1 {font-size: 44px; font-style: italic;}
 .index .content-wrapper {z-index: 5;}
+.index .section-title {background-color: rgba(255, 255, 255, 0.671); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); display: inline-block; border-radius: 25px; padding: 10px 30px; z-index: 50; margin: 10px 12.5px 0;}
+.index .section-title h4 {margin-bottom: 0;}
+.index .section-title h4, .index .title-wrapper h1 {display: inline-block;}
+.index .title-wrapper .section-title {flex: unset;}
 .index .jumbotron {background-color: #ac3d27df; color: white; padding: 30px; border-radius: 25px; margin-top: 30px; margin-bottom: 30px; max-width: 1200px; backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px);}
 .index .jumbotron p.description {font-size: 20px;}
-.index div.action {color: white; background-color: #CA7F72;}
-.index div.action {margin: 10px; border: transparent; width: 240px; padding-right: 10px;}
-.index div.action:hover {background-color: #d6a39a;}
-.index div.action .text {flex: 5;}
-.index div.action .text h2 {color: white; font-size: 14px;}
-.index div.action .text p {font-size: 11px;}
+.index a.action {color: white; background-color: #CA7F72;}
+.index a.action {margin: 10px; border: transparent; width: 240px; padding-right: 10px;}
+.index a.action:hover {background-color: #d6a39a;}
+.index a.action .text {flex: 5;}
+.index a.action .text h2 {color: white; font-size: 14px;}
+.index a.action .text p {font-size: 13px;}
 .index input {width: 100%; padding-left: 50px; margin: 10px 0;}
 .index img.flow {position: fixed; top: 0; right: -520px;}
 .index div.tags {background-color: rgba(255, 255, 255, 0.671); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); display: inline-block; border-radius: 25px; padding: 10px;}
@@ -568,6 +572,7 @@ ul.application-types li label {color: white;}
     .index div.action {width: auto;}
     .index input {padding-left: 10px;}
     .index .jumbotron {padding: 15px;}
+    .index .title-wrapper .section-title {display: inline-block; margin-right: 15px; width: 100%;}
 
     .groups hr {display: none;}
     .groups .main-content {margin-top: 120px;}
